--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<footer class="page-footer light-blue darken-2">
       <div class="footer-copyright">
         <div class="container">
-        © 2015 katrina ezis
+        © 2015 group five
         </div>
       </div>
     </footer>
