descriptions of jobs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="navbar-fixed">
 		<nav class="light-blue darken-2">
 		    <div class="nav-wrapper">
-		      <a ui-sref="introduction" class="white-text" class="brand-logo"><img id="navLogo"src="img/logo.png"></a>
+		      <a ui-sref="intro" class="white-text" class="brand-logo"><img id="navLogo"src="img/logo.png"></a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 		        <li><a class="white-text" ui-sref="intro">Introduction</a></li>
 		        <li><a class="white-text" ui-sref="one">Lesson One</a></li>
