added demo files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 	<!-- Bootstrap Library -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+	<!-- Font Awesome Library -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.7/font-awesome-animation.min.css">
+
 	<!-- jQuery Library -->
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 
@@ -56,8 +60,8 @@
 	</div>
 	<footer class="page-footer light-blue darken-2">
       <div class="footer-copyright">
-        <div class="container">
-        © 2015 group five
+        <div class="container text-center">
+        made with <i class="fa fa-heart faa-pulse animated faa-fast"></i> in seattle
         </div>
       </div>
     </footer>
