--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 
 	<!-- Materialize -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Angular, Angular Router -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
@@ -40,13 +40,13 @@
 	<div class="navbar-fixed">
 		<nav class="light-blue darken-2">
 		    <div class="nav-wrapper">
-		      <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="white-text" class="brand-logo"><img id="navLogo"src="img/logo.png"></a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a class="white-text" ui-sref="intro">Introduction</a></li>
-		        <li><a class="white-text" ui-sref="one">Lesson One</a></li>
-		        <li><a class="white-text" ui-sref="two">Lesson Two</a></li>
-		        <li><a class="white-text" ui-sref="three">Lesson Three</a></li>
-		      </ul>
+	 		    <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="white-text" class="brand-logo"><img id="navLogo"src="img/logo.png"></a>
+			    <ul id="nav-mobile" class="right hide-on-med-and-down">
+				    <li><a class="white-text" ui-sref="intro">Introduction</a></li>
+				    <li><a class="white-text" ui-sref="one">Lesson One</a></li>
+				    <li><a class="white-text" ui-sref="two">Lesson Two</a></li>
+				    <li><a class="white-text" ui-sref="three">Lesson Three</a></li>
+				</ul>
 		    </div>
 	    </nav>
 	</div>
@@ -55,8 +55,8 @@
 		<div id="uiView" ui-view></div>
 	</div>
 	<div id="hello">
-		This is what shepherd should attach to
-	</div>
+<!-- 		This is what shepherd should attach to
+ -->	</div>
 	<footer class="page-footer light-blue darken-2">
       <div class="footer-copyright">
         <div class="container text-center">
