--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 				    <li><a class="white-text" ui-sref="one">Lesson One</a></li>
 				    <li><a class="white-text" ui-sref="two">Lesson Two</a></li>
 				    <li><a class="white-text" ui-sref="three">Lesson Three</a></li>
+				    <li><a class="white-text" ui-sref="four">Lesson Four</a></li>
 				</ul>
 		    </div>
 	    </nav>
@@ -54,9 +55,6 @@
 		<!-- This is where your content will display -->
 		<div id="uiView" ui-view></div>
 	</div>
-	<div id="hello">
-<!-- 		This is what shepherd should attach to
- -->	</div>
 	<footer class="page-footer light-blue darken-2">
       <div class="footer-copyright">
         <div class="container text-center">
