editing intro page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Shepherd Tutorial</title>
-	<link rel="icon" type="image/png" href="img/bluelogo.png" />
+	<link rel="icon" type="image/png" href="img/shep-blue.png" />
 
 	<!-- Shepherd Libraries -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shepherd/1.3.0/css/shepherd-theme-arrows.css" />
@@ -40,7 +40,7 @@
 	<div class="navbar-fixed">
 		<nav class="light-blue darken-2">
 		    <div class="nav-wrapper">
-	 		    <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="white-text" class="brand-logo"><img id="navLogo"src="img/logo.png"></a>
+	 		    <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="white-text" class="brand-logo"><img id="navLogo"src="img/shep-white.png"></a>
 			    <ul id="nav-mobile" class="right hide-on-med-and-down">
 				    <li><a class="white-text" ui-sref="intro">Introduction</a></li>
 				    <li><a class="white-text" ui-sref="one">Lesson One</a></li>
