--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
+	<!-- Animate.css -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+
 	<!-- Read Scripts -->
 	<script src="js/main.js"></script>
 	<link href="css/main.css" type="text/css" rel="stylesheet"/>
