fixed shit, you're welcome

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="navbar-fixed">
 		<nav class="light-blue darken-2">
 		    <div class="nav-wrapper">
-	 		    <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="white-text" class="brand-logo"><img id="navLogo"src="img/shep-white.png"></a>
+	 		    <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank" class="brand-logo"><img id="navLogo"src="img/shep-white.png"></a>
 	 		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			    <ul id="nav-mobile" class="right hide-on-med-and-down">
 				    <li><a class="white-text" ui-sref="intro">Introduction</a></li>
@@ -57,11 +57,11 @@
 				    <li><a class="white-text" ui-sref="four">Lesson Four</a></li>
 				</ul>
 				<ul class="side-nav" id="mobile-demo">
-					<li><a class="white-text" ui-sref="intro">Introduction</a></li>
-					<li><a class="white-text" ui-sref="one">Lesson One</a></li>
-					<li><a class="white-text" ui-sref="two">Lesson Two</a></li>
-					<li><a class="white-text" ui-sref="three">Lesson Three</a></li>
-					<li><a class="white-text" ui-sref="four">Lesson Four</a></li>
+					<li><a class="light-blue-text darken-2-text" ui-sref="intro">Introduction</a></li>
+					<li><a class="light-blue-text darken-2-text" ui-sref="one">Lesson One</a></li>
+					<li><a class="light-blue-text darken-2-text" ui-sref="two">Lesson Two</a></li>
+					<li><a class="light-blue-text darken-2-text" ui-sref="three">Lesson Three</a></li>
+					<li><a class="light-blue-text darken-2-text" ui-sref="four">Lesson Four</a></li>
 				</ul>
 		    </div>
 	    </nav>
